# chromaflow

./: LICENSE  README.md  pyproject.toml
benchmarks/: test_bench_conversions.py
benchmarks/__pycache__/: test_bench_conversions.cpython-312-pytest-8.4.2.pyc.4916
src/chromaflow/: __init__.py  color_object.py  config.py  cvd.py  difference.py  exceptions.py  functional.py  gamut.py  pathfinder.py  plotting.py  utils.py
src/chromaflow/backends/: jax_backend.py  numba_backend.py  numpy_backend.py
src/chromaflow/core/: constants.py  spaces.py
src/chromaflow/data/: cie_1931_2deg_locus.csv
src/chromaflow/tests/: test_api_surface.py  test_color_object.py  test_colour_parity.py  test_conversions.py  test_cvd.py  test_difference.py  test_gamut.py  test_packaging.py  test_plotting.py  test_reference_data.py  test_utils.py
